Update README and config file

--- a/config.yaml
+++ b/config.yaml
@@ -15,13 +15,13 @@
 carpentry: 'incubator'
 
 # Alt-text description of the lesson.
-carpentry_description: 'Lesson Description'
+carpentry_description: 'Styling, linting, and formatting Python code for maintainability and collaboration'
 
 # Overall title for pages.
-title: 'Lesson Title' # FIXME
+title: 'Style, Lint, and Format Python Code'
 
 # Date the lesson was created (YYYY-MM-DD, this is empty by default)
-created: ~ # FIXME
+created: 2025-09-08
 
 # Comma-separated list of keywords for the lesson
 keywords: 'software, data, lesson, The Carpentries' # FIXME
@@ -34,7 +34,7 @@ life_cycle: 'pre-alpha' # FIXME
 license: 'CC-BY 4.0'
 
 # Link to the source repository for this lesson
-source: 'https://github.com/carpentries/workbench-template-md' # FIXME
+source: 'https://github.com/ornl-training/python-style'
 
 # Default branch of your lesson
 branch: 'main'
